deploy: 8116c1c1d8cfb02fa85c6a470acf39b1f80c2fa6

--- a/md_README.html
+++ b/md_README.html
@@ -82,7 +82,7 @@ $(function() {
 <h2><a class="anchor" id="autotoc_md4"></a>
 3. Добавлен benchmark (googlebenchmark)</h2>
 <h2><a class="anchor" id="autotoc_md5"></a>
-4. Настроена автоматическая публикация документации проекта</h2>
+4. Настроена автоматическая публикация документации проекта (https://probablyartem.github.io/homework_cpp/globals.html)</h2>
 </div></div><!-- contents -->
 </div><!-- PageDoc -->
 <!-- start footer part -->
